# starkingdoms-server

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENCE  README.md  SERVER_OPTIONS.js  bans.json  cert.pem  client.js  client.js.old  client.js.rej  core_server_util.js  deploy.php  get_client_info.php  index.css  index.html  index.js  index.js.gpg  indexbkup.html  key.pem  logging.js  main.html  main.php  make_build.js  package-lock.json  package.json  readme.md  server_sync.php  starkingdoms-version  starkingdoms.txt  style.css  styleindex.css  stylemain.css  styletitle.css  update.php  updaterepo.sh  webhook.txt  whoami.php  (+1 more)
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: build.yml  codeql-analysis.yml  main.yml  rust.yml
admin/: conn.php  index.php  log.php  login.php  logout.php  navcode.code.map  tree.php
admin/db/: types.php
api/v1/: .gitignore  online.php
auth/: get_token.php  handover.php
client/: Cargo.toml  LICENSE_MIT  index.html  main.html  package-lock.json
client/src/: lib.rs
patches/: 01_client_devtoprod.patch  02_client_prodtodev.patch
server/: Cargo.toml
server/src/: main.rs
shit/: dump.txt  pixi.min.js  script.txt
src/: SERVER_OPTIONS.js  conn_funcs.rs  connection.rs  core_server_util.js  game_connection.rs  gameloop.rs  index.js  logging.js  main.py  main.rs  modules.js  packet.rs  physics.rs  player.rs  types.rs  util.js
static/css/: index.css  styleindex.css  stylemain.css
static/scripts/: client.js
stk_protocol/: Cargo.toml
stk_protocol/src/: protocol.rs
(+12 files in other folders)
