[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
async-tungstenite = "0.20.0"
futures = "0.3.27"
heapless = "0.7.16"
postcard = { version = "1.0.4", features = ["alloc"] }
stk_protocol = { path = "../stk_protocol/" }
